--- a/src/app/work-history/work-history.component.scss
+++ b/src/app/work-history/work-history.component.scss
@@ -1,17 +1,25 @@
 @import '~@angular/material/theming';
 @import '../../styles/variables.scss';
 @import '../../styles/functions.scss';
+@import '../../styles/mixins.scss';
 
 :host {
     #work-history-container {
         padding-bottom: 32px;
     }
-    mat-card, mat-card-subtitle, .mat-expansion-panel, mat-panel-description {
+    a {
+        margin: 3px;
+        @include hover-shadow(3px, 3px, 6px);
+    }
+    mat-card, mat-card-subtitle, .mat-expansion-panel, mat-panel-description, a {
         transition: trans-color-bgcolor(), transform 500ms ease-in-out;
     }
     mat-card {
         margin: 1rem;
         max-width: 400px;
+    }
+    mat-card-actions {
+        margin-bottom: 0;
     }
     ul {
         padding-left: 2ch;
