Imported BrowserAnimationsModule into modules

--- a/src/app/project-history/project-history.component.html
+++ b/src/app/project-history/project-history.component.html
@@ -11,8 +11,7 @@
   
       <mat-card-content>
         <div *ngIf="institution.details">
-          <!--  [@.disabled]="true" keeps expansion panel closed during view transitions, otherwise expanded during animation -->
-          <mat-expansion-panel [@.disabled]="true">
+          <mat-expansion-panel>
             <mat-expansion-panel-header>
               <mat-panel-description>Details</mat-panel-description>
             </mat-expansion-panel-header>
