Updated Home, Footer, styles

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<!-- https://tburleson-layouts-demos.firebaseapp.com/#/docs -->
+<div id="home-container" fxLayout="column" fxLayoutAlign="center center">
+    <h1 class="mat-display-2">Welcome to my Angular application!</h1>
+    <p>
+        This is a personal project that I'm undertaking to gain additional experience with developing applications, user interfaces, and user experiences with the Angular framework/platform.
+        Current, I have the following features implemented (and plan to add more as time allows):
+    </p>
+    <div fxLayout="column" fxLayoutAlight="start start">
+        <ul class="mat-body-strong">
+            <li>Utilizes <a href="https://material.angular.io/components/categories" target="_blank">Angular Material UI components</a> to take advantage of the <a href="https://material.io/design/introduction" target="_blank">Material design system</a> (created by Google).</li>
+            <li>Multiple <a href="https://material.angular.io/guide/theming" target="_blank">Angular Material themes</a> (currently light and dark) that follow the guidance of the <a href="https://material.io/archive/guidelines/style/color.html#color-color-palette" target="_blank">Material design spec</a>.</li>
+            <li>Visual styles defined with <a href="https://sass-lang.com/" target="_blank">Sass</a> (preprocessor scripting language that compiles to <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a>).</li>
+            <li>Unit testing with the <a href="https://karma-runner.github.io/latest/index.html" target="_blank">Karma test runner</a> and the <a href="https://jasmine.github.io/" target="_blank">Jasmine test framework</a>.</li>
+            <li><a href="https://www.atlassian.com/continuous-delivery/continuous-deployment" target="_blank">Continuous deployment</a> with <a href="https://docs.travis-ci.com/user/for-beginners" target="_blank">Travis CI</a> and <a href="https://devcenter.heroku.com/articles/how-heroku-works" target="_blank">Heroku</a>.</li>
+            <li>View (a.k.a. page) transition animations with the <a href="https://angular.io/guide/animations" target="_blank">Angular animations</a> system.</li>
+            <li>Responsive layouts (please try resizing your browser).</li>
+            <li>Content (e.g. my work history) populated with JSON files.</li>
+        </ul>
+    </div>
+    <p>
+        The next features that I would like to implement are passing the current theme to routed views, fetching/processing data from a 3rd party API, and allowing users to create accounts and log in.
+    </p>
+</div>
