--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <div id="footer" fxLayout="row" fxLayoutAlign="space-evenly center">
-    <span>one</span>
+    <span id="copyright"></span>
 </div>
   
