--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -31,7 +31,7 @@
           </span>
         </li>
         <li>
-          <span class="hover-arrow">
+          <span class="hover-arrow mat-body-strong">
             <a
             routerLink="/project-history"
             routerLinkActive="active"
