--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,34 +1,31 @@
 <mat-toolbar id="toolbar" [ngClass]="{'mat-primary': !darkMode}">
-  <button
-    *ngIf="!drawerOpen else collapseDrawer"
-    mat-icon-button
-    matTooltip="Expand navigation drawer"
-    matTooltipHideDelay="200"
-    aria-label="Icon button with a menu icon"
-    (click)="menuButtonClick()"
-    [ngClass]="{'mat-primary': darkMode}"
-  >
+  <button 
+  *ngIf="!drawerOpen else collapseDrawer"
+  mat-icon-button
+  matTooltip="Expand navigation drawer"
+  matTooltipHideDelay="200"
+  aria-label="Icon button with a menu icon"
+  (click)="menuButtonClick()"
+  [ngClass]="{'mat-primary': darkMode}">
     <mat-icon>menu</mat-icon>
   </button>
   <ng-template #collapseDrawer>
-    <button
-      mat-icon-button
-      matTooltip="Collapse navigation drawer"
-      matTooltipHideDelay="200"
-      aria-label="Icon button with a menu icon"
-      (click)="menuButtonClick()"
-      [ngClass]="{'mat-primary': darkMode}"
-  >
-    <mat-icon>close</mat-icon>
+    <button 
+    mat-icon-button
+    matTooltip="Collapse navigation drawer"
+    matTooltipHideDelay="200"
+    aria-label="Icon button with a menu icon"
+    (click)="menuButtonClick()"
+    [ngClass]="{'mat-primary': darkMode}">
+      <mat-icon>close</mat-icon>
     </button>
   </ng-template>
   <span id="toolbar-title">{{title}}</span>
   <span class="spacer"></span>
-  <button
-    mat-icon-button
-    (click)="lightDarkClick()"
-    [ngClass]="{'mat-primary': darkMode}"
-  >
+  <button 
+  mat-icon-button
+  (click)="lightDarkClick()"
+  [ngClass]="{'mat-primary': darkMode}">
     <mat-icon *ngIf="darkMode else lightTheme">brightness_7</mat-icon>
     <ng-template #lightTheme>
       <mat-icon >brightness_3</mat-icon>
